<?xml version="1.0"?>
<package format="2">
  <name>socketcan_rpi</name>
  <version>1.0.0</version>
  <description>The socketcan_rpi package</description>
  <author>Jamorn Saksommon</author>
  <maintainer email="ezypad2@gmail.com">Jamorn</maintainer>

  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
 


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
